fix menu button alignment

--- a/app/components/Button/index.module.css
+++ b/app/components/Button/index.module.css
@@ -77,6 +77,7 @@
 .button[data-symbol="menu"]::before {
     content: "\2630";
     font-size: 1.3em;
+    transform: translateY(-14%);
 }
 /** COLOR THEME    ******************************************/
 .button[data-color="white"] {
